// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`repeat '' Error to match snapshot 1`] = `
{
  "expected": [
    "'a'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`repeat 'a' AST to match snapshot 1`] = `
[
  "a",
]
`;

exports[`repeat 'aa' AST to match snapshot 1`] = `
[
  "a",
  "a",
]
`;

exports[`repeat 'aaa' Error to match snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 3,
    "index": 2,
    "line": 1,
  },
}
`;

exports[`repeat 'abaa' Error to match snapshot 1`] = `
{
  "expected": [
    "'a'",
    "eof",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;
